--- a/public/style.css
+++ b/public/style.css
@@ -5,17 +5,61 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: "Raleway", sans-serif
+  font-family: "Raleway", sans-serif
 }
 
 /* https://stackoverflow.com/questions/64997928/how-to-offset-a-anchor-link-to-clear-fixed-header */
 :target:before {
-    content: "";
-    display: block;
-    height: 100px;
-    margin: -100px 0 0;
+  content: "";
+  display: block;
+  height: 100px;
+  margin: -100px 0 0;
 }
 
-.w3-modal{
-    z-index: 12 !important;
+.w3-modal {
+  z-index: 12 !important;
+}
+
+.nodecoration {
+  text-decoration: none;
+}
+
+/* tooltip logic */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
